--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,31 @@
     transform: rotate(360deg);
   }
 }
+
+.App-body {
+  background-color: #488585;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+#blocklyDiv{
+  position: absolute;
+
+}
+
+#blocklyArea{
+  position: absolute;
+  height:100%;
+  width:100%;
+}
+
+#blocklyContainer{
+  position: absolute;
+  height:100%;
+  width:100%;
+}
